--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -385,9 +385,13 @@ other
   max-width: 65%;
   color: #E30480;
   font-siz: 16px;
+  text-shadow: 1px 1px 1px #fff, -1px 1px 1px #fff, 1px -1px 1px #fff, -1px -1px 1px #fff, 1px 1px 1px #fff, -1px 1px 1px #fff, 1px -1px 1px #fff, -1px -1px 1px #fff;
   background: #FFE100;
   border: solid 6px #fff;
   border-radius: 30px;
+  box-shadow: 1px 1px 1px #000, -1px 1px 1px #000, 1px -1px 1px #000, -1px -1px 1px #000, 1px 1px 1px #000, -1px 1px 1px #000, 1px -1px 1px #000, -1px -1px 1px #000, 5px 5px #000;
+
+	
 }
 .balloon1 p {
   margin: 0;
@@ -402,9 +406,13 @@ other
   max-width: 65%;
   color: #FFE100;
   font-siz: 16px;
+  text-shadow: 1px 1px 1px #333, -1px 1px 1px #333, 1px -1px 1px #333, -1px -1px 1px #333, 1px 1px 1px #333, -1px 1px 1px #333, 1px -1px 1px #333, -1px -1px 1px #333;
+
   background: #E30480;
   border: solid 6px #fff;
   border-radius: 30px;
+  box-shadow: 1px 1px 1px #000, -1px 1px 1px #000, 1px -1px 1px #000, -1px -1px 1px #000, 1px 1px 1px #000, -1px 1px 1px #000, 1px -1px 1px #000, -1px -1px 1px #000, 5px 5px #000;
+
 }
 .balloon2 p {
   margin: 0;
