--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -287,13 +287,13 @@ a:hover {
 .col {
   margin-top: 70px;
 }
-
 /*.active {
   transform: translate(300px);
   background: #ff0000;
 }*/
 .mainArea02 {
   background-color: #E30480;
+  background-image: url("../images/bg_dot.png");
 }
 h1 {
   margin: 10px 0;
@@ -305,10 +305,8 @@ h1 {
   line-height: 55px;
   text-align: center;
   -webkit-font-smoothing: subpixel-antialiased;
-
-    text-shadow: 1px 1px 1px #000, -1px 1px 1px #000, 1px -1px 1px #000, -1px -1px 1px #000, 1px 1px 1px #000, -1px 1px 1px #000, 1px -1px 1px #000, -1px -1px 1px #000, 5px 5px #000;
-    /*transform: rotate(-4deg);*/
-
+  text-shadow: 1px 1px 1px #000, -1px 1px 1px #000, 1px -1px 1px #000, -1px -1px 1px #000, 1px 1px 1px #000, -1px 1px 1px #000, 1px -1px 1px #000, -1px -1px 1px #000, 5px 5px #000;
+  /*transform: rotate(-4deg);*/
 }
 h2 {
   font-weight: bold;
@@ -318,11 +316,8 @@ h2 {
   line-height: 1.5em;
   text-align: center;
   -webkit-font-smoothing: subpixel-antialiased;
-	
-	    text-shadow: 1px 1px 1px #000, -1px 1px 1px #000, 1px -1px 1px #000, -1px -1px 1px #000, 1px 1px 1px #000, -1px 1px 1px #000, 1px -1px 1px #000, -1px -1px 1px #000, 4px 4px #000;
-    
+  text-shadow: 1px 1px 1px #000, -1px 1px 1px #000, 1px -1px 1px #000, -1px -1px 1px #000, 1px 1px 1px #000, -1px 1px 1px #000, 1px -1px 1px #000, -1px -1px 1px #000, 4px 4px #000;
 }
-
 h3 {
   font-weight: bold;
   font-size: 1em;
@@ -390,8 +385,6 @@ other
   border: solid 6px #fff;
   border-radius: 30px;
   box-shadow: 1px 1px 1px #000, -1px 1px 1px #000, 1px -1px 1px #000, -1px -1px 1px #000, 1px 1px 1px #000, -1px 1px 1px #000, 1px -1px 1px #000, -1px -1px 1px #000, 5px 5px #000;
-
-	
 }
 .balloon1 p {
   margin: 0;
@@ -407,18 +400,15 @@ other
   color: #FFE100;
   font-siz: 16px;
   text-shadow: 1px 1px 1px #333, -1px 1px 1px #333, 1px -1px 1px #333, -1px -1px 1px #333, 1px 1px 1px #333, -1px 1px 1px #333, 1px -1px 1px #333, -1px -1px 1px #333;
-
   background: #E30480;
   border: solid 6px #fff;
   border-radius: 30px;
   box-shadow: 1px 1px 1px #000, -1px 1px 1px #000, 1px -1px 1px #000, -1px -1px 1px #000, 1px 1px 1px #000, -1px 1px 1px #000, 1px -1px 1px #000, -1px -1px 1px #000, 5px 5px #000;
-
 }
 .balloon2 p {
   margin: 0;
   padding: 0 3px 10px 0;
 }
-
 /*「ページトップへ」ボタン*/
 #page-top {
   display: none;
