--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -1,12 +1,5 @@
 @charset "UTF-8";
-@import url('https://fonts.googleapis.com/css?family=Oswald:700');
-@font-face {
-  font-family: 'bebasregular';
-  src: url('../fonts/bebas-regular-webfont.eot');
-  src: url('../fonts/bebas-regular-webfont.eot?#iefix') format('embedded-opentype'), url('../fonts/bebas-regular-webfont.woff2') format('woff2'), url('../fonts/bebas-regular-webfont.woff') format('woff'), url('../fonts/bebas-regular-webfont.ttf') format('truetype'), url('../fonts/bebas-regular-webfont.svg#bebasregular') format('svg');
-  font-weight: normal;
-  font-style: normal;
-}
+
 html {
   width: 100%;
   /*height: 100%;
@@ -17,7 +10,7 @@ body {
   height: 100%;
   position: relative;
   line-height: 1;
-  font-family: 'Work Sans', sans-serif;
+  font-family:'Open Sans', sans-serif;
   background: #000;
   font-size: 14px;
   text-align: center;
