--- a/styles.css
+++ b/styles.css
@@ -88,14 +88,14 @@ header h1 {
   color: #ff0000; /* 文章赤色 */
 }
 
-/* 文章 */
+/* プロフィール並び方 */
 .profile-images-container {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(3, auto);
   gap: 10px;
   padding: 0 20px;
-  margin-bottom: 20px; /* 文章 */
+  margin-bottom: 20px; /* 間隔 */
 }
 
 @media (max-width: 768px) {
