--- a/styles.css
+++ b/styles.css
@@ -10,9 +10,10 @@ body {
 header {
   background-color: #ff6699;
   color: white;
-  padding: 20px;
+  padding: 10px;
   text-align: center;
-  box-shadow: 0 2px 5px #ffcc00;
+  border-bottom: solid 10px #ffcc00;
+  border-top: solid 10px #ffcc00;
 }
 
 header h1 {
