--- a/styles.css
+++ b/styles.css
@@ -80,7 +80,8 @@ header h1 {
 /* 文章 */
 .search-result-text {
   text-align: center;
-  margin-bottom: 10px;
+  /*margin-bottom: 10px;*/
+  margin: 10px 20px;
   font-size: 16px;
   color: #555;
 }
