--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ header h1 {
 .search-box p {
   font-size: 16px;
   color: #555;
-  margin-bottom: 10px;
+  margin: 20px;
 }
 
 /* GPSボタン */
@@ -80,8 +80,7 @@ header h1 {
 /* 文章 */
 .search-result-text {
   text-align: center;
-  /*margin-bottom: 10px;*/
-  margin: 10px 20px;
+  margin-bottom: 10px;
   font-size: 16px;
   color: #555;
 }
